Refactor /resource to /ld_viewer/resource and use SPARQL endpoint instead of RDF4J repository
